// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormInput Compact 1`] = `
<input
  className="fd-input fd-input--compact"
  placeholder="Compact"
  type="text"
/>
`;

exports[`Storyshots Component API/Forms/FormInput Dev 1`] = `
<input
  className="fd-input"
  disabled={false}
  placeholder="Placeholder"
  readOnly={false}
  type="text"
/>
`;

exports[`Storyshots Component API/Forms/FormInput Disabled 1`] = `
<input
  className="fd-input"
  disabled={true}
  placeholder="Disabled"
  type="text"
/>
`;

exports[`Storyshots Component API/Forms/FormInput No Styles 1`] = `
<input
  className="xxx-input"
  placeholder="Default"
  type="text"
/>
`;

exports[`Storyshots Component API/Forms/FormInput Primary 1`] = `
<input
  className="fd-input"
  placeholder="Default"
  type="text"
/>
`;

exports[`Storyshots Component API/Forms/FormInput Read Only 1`] = `
<input
  className="fd-input"
  placeholder="ReadOnly"
  readOnly={true}
  type="text"
/>
`;

exports[`Storyshots Component API/Forms/FormInput Validation States 1`] = `
<div
  className="fddocs-container"
>
  <div
    className="fd-popover"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <input
          className="fd-input is-error"
          placeholder="Error"
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <input
          className="fd-input is-warning"
          placeholder="Warning"
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <input
          className="fd-input is-information"
          placeholder="Information"
          type="text"
        />
      </div>
    </div>
  </div>
  <div
    className="fd-popover"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <input
          className="fd-input is-success"
          placeholder="Success"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;
